navbar style complete

--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/Index.css">
+    <link rel="stylesheet" href="Css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
@@ -16,17 +16,17 @@
       
         <div class="collapse navbar-collapse justify-content-end mr-lg-5" style="font-size: 15px; font-weight: bold;" id="navbarSupportedContent">
           <ul class="navbar-nav navbar-light">
-            <li class="nav-item pl-lg-4">
-              <a class="nav-link text-uppercase">Home</a>
+            <li class="nav-item text-uppercase pl-lg-4">
+              <a class="nav-link link-top">Home</a>
             </li>
             <li class="nav-item text-uppercase pl-lg-4">
-              <a class="nav-link">About</a>
+              <a class="nav-link link-top">About</a>
             </li>
             <li class="nav-item text-uppercase pl-lg-4">
-              <a class="nav-link">Event <span class="badge badge-danger">9</span></a>
+              <a class="nav-link link-top">Event <span class="badge badge-danger">9</span></a>
             </li>
             <li class="nav-item dropdown text-uppercase pl-lg-4">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle link-top" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Organisation
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -36,8 +36,8 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
-            <li class="nav-item pl-lg-4">
-              <a class="nav-link text-uppercase" href="#">Contact</a>
+            <li class="nav-item text-uppercase pl-lg-4">
+              <a class="nav-link link-top" href="#">Contact</a>
             </li>
           </ul>
           <form class="form-inline pl-lg-4">
