--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse justify-content-end mr-lg-5" style="font-size: 15px; font-weight: bold;" id="navbarSupportedContent">
           <ul class="navbar-nav navbar-light">
             <li class="nav-item text-uppercase pl-lg-4">
-              <a class="nav-link link-top">Home</a>
+              <a href="Index.html" class="nav-link link-top active">Home</a>
             </li>
             <li class="nav-item text-uppercase pl-lg-4">
               <a class="nav-link link-top">About</a>
