--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="Css/Index.css">
 </head>
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: rgba(0, 0, 0, 0.5);">
+    <nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: rgba(255, 255, 255-, 0.5);">
         <button class="navbar-toggler primary-btn" style="background: #228b22;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars" style="font-size: 20px; color: #000000;"></i>
         </button>
@@ -20,10 +20,10 @@
               <a href="Index.html" class="nav-link link-top active">Home</a>
             </li>
             <li class="nav-item text-uppercase pl-lg-4">
-              <a class="nav-link link-top">About</a>
+              <a class="nav-link link-top" href="#">About</a>
             </li>
             <li class="nav-item text-uppercase pl-lg-4">
-              <a class="nav-link link-top">Event <span class="badge badge-danger">9</span></a>
+              <a class="nav-link link-top" href="#">Event <span class="badge badge-danger">9</span></a>
             </li>
             <li class="nav-item dropdown text-uppercase pl-lg-4">
               <a class="nav-link dropdown-toggle link-top" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
