--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,9 @@
         
         .background   {
             background-image: url(img/hero_bg.jpg);
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
     
         }
 
